Spring Data JPA @Query Annotation

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.h2.console.enabled=true
 
 # Path at which the console is available.
 spring.h2.console.path=/h2
+
+
+#spring.jpa.hibernate.ddl-auto=create-drop
