Creating custom properties in application.properties/yml & using those properties in code - with @Value

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.h2.console.path=/h2
 
 
 #spring.jpa.hibernate.ddl-auto=create-drop
+
+# to change default server port 8080
+#server.port=5000
+
+# custom property which can be used in the application
+# on every release, we could bump the version so that we know the code version running, when we access the API.
+# need to create a controller to actually spit out the property when the home of the application is called.
+app.version=1.0.0
